--- a/app/src/main/res/layout/activity_main_assignation.xml
+++ b/app/src/main/res/layout/activity_main_assignation.xml
@@ -6,17 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".MainAssignation"
     android:orientation="vertical"
-    android:id="@+id/llParent">
+    android:id="@+id/llParent"
+    android:background="@color/gray_200">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:cardBackgroundColor="@color/colorPrimary">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="20dp">
+            android:padding="50dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -28,15 +30,18 @@
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:layout_alignParentRight="true">
                     <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:src="@drawable/ic_save"/>
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/ic_save"
+                        android:tint="@color/white"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:text="Save"
                         android:gravity="center_vertical"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold"
+                        android:textSize="18sp"
+                        android:textColor="@color/white"/>
                 </LinearLayout>
             </RelativeLayout>
 
@@ -46,7 +51,9 @@
                 android:gravity="center"
                 android:text="title"
                 android:textStyle="bold"
-                android:textSize="20sp"/>
+                android:textSize="25sp"
+                android:textColor="@color/white"
+                android:padding="15dp"/>
 
             <LinearLayout android:id="@+id/ll1"
                 android:layout_width="match_parent"
@@ -59,11 +66,22 @@
                     android:layout_height="match_parent"
                     android:text="Text"
                     android:gravity="center_vertical"
-                    android:layout_weight="1"/>
-                <Spinner android:id="@+id/spn1"
+                    android:layout_weight="1"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
+
+                <RelativeLayout
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"/>
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:background="@color/white">
+                    <Spinner android:id="@+id/spn1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                </RelativeLayout>
+
             </LinearLayout>
 
 
@@ -78,11 +96,19 @@
                     android:layout_height="match_parent"
                     android:text="Text"
                     android:gravity="center_vertical"
-                    android:layout_weight="1"/>
-                <Spinner android:id="@+id/spn2"
+                    android:layout_weight="1"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
+                <RelativeLayout
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"/>
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:background="@color/white">
+                <Spinner android:id="@+id/spn2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+                </RelativeLayout>
             </LinearLayout>
 
 
@@ -97,11 +123,19 @@
                     android:layout_height="match_parent"
                     android:text="Text"
                     android:gravity="center_vertical"
-                    android:layout_weight="1"/>
-                <Spinner android:id="@+id/spn3"
+                    android:layout_weight="1"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
+                <RelativeLayout
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"/>
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:background="@color/white">
+                <Spinner android:id="@+id/spn3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+                </RelativeLayout>
             </LinearLayout>
 
         </LinearLayout>
