--- a/app/src/main/res/layout/fragment_resume_order.xml
+++ b/app/src/main/res/layout/fragment_resume_order.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewOrderFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".NewOrderFragment"
+    android:background="@color/gray_200">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="200dp"
-            android:backgroundTint="@color/colorPrimary">
+            app:cardBackgroundColor="@color/colorPrimary">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -40,8 +42,8 @@
                         android:gravity="left"
                         android:layout_gravity="center_vertical">
                         <ImageView
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
                             android:src="@drawable/ic_action_list_alt"
                             android:tint="@color/white"
                             android:layout_marginRight="5dp"/>
@@ -51,7 +53,7 @@
                             android:text="Menu"
                             android:gravity="center_vertical"
                             android:textStyle="bold"
-                            android:textSize="16dp"
+                            android:textSize="18dp"
                             android:textColor="@color/white"/>
                     </LinearLayout>
 
@@ -87,8 +89,8 @@
                         android:layout_weight="1"
                         android:gravity="right">
                         <ImageView
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
                             android:src="@drawable/ic_action_monetization_on"
                             android:tint="@color/white"/>
                         <TextView
@@ -97,7 +99,8 @@
                             android:text=" Pagar"
                             android:gravity="center_vertical"
                             android:textStyle="bold"
-                            android:textColor="@color/white"/>
+                            android:textColor="@color/white"
+                            android:textSize="18sp"/>
                     </LinearLayout>
 
 
@@ -186,7 +189,7 @@
         <android.support.v7.widget.CardView android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
-            android:backgroundTint="@color/colorPrimary">
+            app:cardBackgroundColor="@color/colorPrimary">
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -285,7 +288,7 @@
                             android:layout_weight="1.5"
                             android:gravity="right"
                             android:text="Total:"
-                            android:textSize="16sp"
+                            android:textSize="25sp"
                             android:textColor="@color/white"
                             android:textStyle="bold"/>
 
@@ -295,7 +298,7 @@
                             android:layout_weight="1"
                             android:gravity="right"
                             android:text="$0.0"
-                            android:textSize="20sp"
+                            android:textSize="30sp"
                             android:textColor="@color/white"
                             android:textStyle="bold"/>
 
