--- a/app/src/main/res/layout/activity_maintenance_screen.xml
+++ b/app/src/main/res/layout/activity_maintenance_screen.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MaintenanceProductTypes"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/gray_200">
 
 
     <android.support.v7.widget.RecyclerView
