--- a/app/src/main/res/layout/client_search_dialog.xml
+++ b/app/src/main/res/layout/client_search_dialog.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:background="@color/gray_200">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
@@ -17,7 +17,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingBottom="10dp">
+                android:padding="50dp">
 
 
                 <android.support.design.widget.TextInputLayout
