--- a/app/src/main/res/layout/fragment_main_new_order.xml
+++ b/app/src/main/res/layout/fragment_main_new_order.xml
@@ -3,18 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewOrderFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".NewOrderFragment"
+    android:background="@color/gray_200">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+        <include layout="@layout/notification_bar"/>
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="200dp"
-            android:backgroundTint="@color/colorPrimary">
+            app:cardBackgroundColor="@color/colorPrimary">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -36,8 +39,8 @@
                         android:background="?attr/selectableItemBackgroundBorderless"
                         android:padding="5dp">
                         <ImageView
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
                             android:src="@drawable/ic_action_list_alt"
                             android:tint="@color/white"/>
                         <TextView
@@ -46,7 +49,7 @@
                             android:text="Resumen"
                             android:gravity="center_vertical"
                             android:textStyle="bold"
-                            android:textSize="16dp"
+                            android:textSize="18dp"
                             android:textColor="@color/white"/>
                     </LinearLayout>
 
