--- a/app/src/main/res/layout/fragment_maintenance.xml
+++ b/app/src/main/res/layout/fragment_maintenance.xml
@@ -65,7 +65,7 @@
                             <android.support.v7.widget.CardView
                                 android:layout_width="120dp"
                                 android:layout_height="120dp"
-                                android:backgroundTint="@color/colorPrimary"
+                                app:cardBackgroundColor="@color/colorPrimary"
                                 app:cardCornerRadius="60dp">
 
                                 <ImageView android:id="@+id/btnActualizationCenter"
@@ -148,7 +148,7 @@
                                 android:layout_width="120dp"
                                 android:layout_height="120dp"
                                 app:cardCornerRadius="60dp"
-                                android:backgroundTint="@color/colorPrimary">
+                                app:cardBackgroundColor="@color/colorPrimary">
                                 <ImageView android:id="@+id/btnClients"
                                     android:layout_width="80dp"
                                     android:layout_height="80dp"
@@ -228,7 +228,7 @@
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
                                 app:cardCornerRadius="50dp"
-                                android:backgroundTint="@color/colorPrimary">
+                                app:cardBackgroundColor="@color/colorPrimary">
 
                                 <ImageView android:id="@+id/btnFamilyInv"
                                     android:layout_width="60dp"
@@ -259,7 +259,7 @@
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
                                 app:cardCornerRadius="50dp"
-                                android:backgroundTint="@color/colorPrimary">
+                                app:cardBackgroundColor="@color/colorPrimary">
                             <ImageView android:id="@+id/btnGroupsInv"
                                 android:layout_width="60dp"
                                 android:layout_height="60dp"
@@ -288,7 +288,7 @@
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
                                 app:cardCornerRadius="50dp"
-                                android:backgroundTint="@color/colorPrimary">
+                                app:cardBackgroundColor="@color/colorPrimary">
                             <ImageView android:id="@+id/btnMeasuresInv"
                                 android:layout_width="80dp"
                                 android:layout_height="80dp"
@@ -324,7 +324,7 @@
                             android:layout_width="100dp"
                             android:layout_height="100dp"
                             app:cardCornerRadius="50dp"
-                            android:backgroundTint="@color/colorPrimary">
+                            app:cardBackgroundColor="@color/colorPrimary">
                         <ImageView android:id="@+id/btnProductsInv"
                             android:layout_width="80dp"
                             android:layout_height="80dp"
@@ -355,7 +355,7 @@
                             android:layout_width="100dp"
                             android:layout_height="100dp"
                             app:cardCornerRadius="50dp"
-                            android:backgroundTint="@color/colorPrimary">
+                            app:cardBackgroundColor="@color/colorPrimary">
                             <ImageView android:id="@+id/btnAlmacenes"
                                 android:layout_width="60dp"
                                 android:layout_height="60dp"
@@ -432,7 +432,7 @@
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
                                 app:cardCornerRadius="50dp"
-                                android:backgroundTint="@color/colorPrimary">
+                                app:cardBackgroundColor="@color/colorPrimary">
                             <ImageView android:id="@+id/btnFamily"
                                 android:layout_width="60dp"
                                 android:layout_height="60dp"
@@ -461,7 +461,7 @@
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
                                 app:cardCornerRadius="50dp"
-                                android:backgroundTint="@color/colorPrimary">
+                                app:cardBackgroundColor="@color/colorPrimary">
                             <ImageView android:id="@+id/btnGroups"
                                 android:layout_width="60dp"
                                 android:layout_height="60dp"
@@ -490,7 +490,7 @@
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
                                 app:cardCornerRadius="50dp"
-                                android:backgroundTint="@color/colorPrimary">
+                                app:cardBackgroundColor="@color/colorPrimary">
                             <ImageView android:id="@+id/btnMeasures"
                                 android:layout_width="80dp"
                                 android:layout_height="80dp"
@@ -526,7 +526,7 @@
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
                                 app:cardCornerRadius="50dp"
-                                android:backgroundTint="@color/colorPrimary">
+                                app:cardBackgroundColor="@color/colorPrimary">
                             <ImageView android:id="@+id/btnProducts"
                                 android:layout_width="80dp"
                                 android:layout_height="80dp"
@@ -603,7 +603,7 @@
                         <android.support.v7.widget.CardView
                             android:layout_width="120dp"
                             android:layout_height="120dp"
-                            android:backgroundTint="@color/colorPrimary"
+                            app:cardBackgroundColor="@color/colorPrimary"
                             app:cardCornerRadius="60dp">
                         <ImageView android:id="@+id/btnUserRol"
                             android:layout_width="80dp"
@@ -632,7 +632,7 @@
                         <android.support.v7.widget.CardView
                             android:layout_width="120dp"
                             android:layout_height="120dp"
-                            android:backgroundTint="@color/colorPrimary"
+                            app:cardBackgroundColor="@color/colorPrimary"
                             app:cardCornerRadius="60dp">
                         <ImageView android:id="@+id/btnUsers"
                             android:layout_width="60dp"
@@ -746,7 +746,7 @@
                             <android.support.v7.widget.CardView
                                 android:layout_width="120dp"
                                 android:layout_height="120dp"
-                                android:backgroundTint="@color/colorPrimary"
+                                app:cardBackgroundColor="@color/colorPrimary"
                                 app:cardCornerRadius="60dp">
                             <ImageView android:id="@+id/btnRolesControl"
                                 android:layout_width="80dp"
@@ -776,7 +776,7 @@
                             <android.support.v7.widget.CardView
                                 android:layout_width="120dp"
                                 android:layout_height="120dp"
-                                android:backgroundTint="@color/colorPrimary"
+                                app:cardBackgroundColor="@color/colorPrimary"
                                 app:cardCornerRadius="60dp">
                             <ImageView android:id="@+id/btnUsersControl"
                                 android:layout_width="60dp"
@@ -870,7 +870,7 @@
                                 android:layout_width="120dp"
                                 android:layout_height="120dp"
                                 app:cardCornerRadius="60dp"
-                                android:backgroundTint="@color/colorPrimary">
+                                app:cardBackgroundColor="@color/colorPrimary">
                                 <ImageView android:id="@+id/btnPrinter"
                                     android:layout_width="80dp"
                                     android:layout_height="80dp"
