--- a/app/src/main/res/layout/fragment_receipt_resume.xml
+++ b/app/src/main/res/layout/fragment_receipt_resume.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ReceiptResumeFragment">
 
     <LinearLayout
@@ -14,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="4"
-            android:backgroundTint="@color/colorPrimary">
+            app:cardBackgroundColor="@color/colorPrimary">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -47,7 +48,8 @@
                             android:text="Recibos"
                             android:textColor="@color/white"
                             android:textStyle="bold"
-                            android:gravity="center_vertical"/>
+                            android:gravity="center_vertical"
+                            android:textSize="18sp"/>
                     </LinearLayout>
 
 
@@ -71,7 +73,8 @@
                             android:text="Opciones"
                             android:textColor="@color/white"
                             android:textStyle="bold"
-                            android:gravity="center_vertical"/>
+                            android:gravity="center_vertical"
+                            android:textSize="18sp"/>
                     </LinearLayout>
 
                 </RelativeLayout>
@@ -231,7 +234,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:backgroundTint="@color/colorPrimary">
+            app:cardBackgroundColor="@color/colorPrimary">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -250,7 +253,7 @@
                         android:text="Total: "
                         android:gravity="center|right"
                         android:layout_weight="1"
-                        android:textSize="20sp"
+                        android:textSize="25sp"
                         android:textColor="@color/white"
                         android:textStyle="bold"/>
 
@@ -259,7 +262,7 @@
                         android:layout_height="match_parent"
                         android:text=""
                         android:gravity="center|right"
-                        android:textSize="20sp"
+                        android:textSize="30sp"
                         android:textColor="@color/white"
                         android:textStyle="bold"/>
 
