--- a/app/src/main/res/layout/fragment_receipt_search.xml
+++ b/app/src/main/res/layout/fragment_receipt_search.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ReceiptSearchFragment">
 
   <LinearLayout
@@ -15,7 +16,7 @@
       <android.support.v7.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:backgroundTint="@color/colorPrimary"
+          app:cardBackgroundColor="@color/colorPrimary"
           android:minHeight="200dp">
 
           <LinearLayout
