--- a/app/src/main/res/layout/maintenance_w2_spinner.xml
+++ b/app/src/main/res/layout/maintenance_w2_spinner.xml
@@ -5,16 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MaintenanceProductTypes"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/gray_200">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:cardBackgroundColor="@color/colorPrimary">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="30dp"
+            android:padding="50dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -27,30 +29,47 @@
                     android:layout_weight="1"
                     android:textStyle="bold"
                     android:gravity="center_vertical"
-                    android:text="Texto"/>
+                    android:text="Texto"
+                    android:textSize="18sp"
+                    android:textColor="@color/white"/>
 
-                <Spinner android:id="@+id/spn"
+                <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="3"/>
+                    android:layout_weight="3"
+                    android:background="@color/white">
+                    <Spinner android:id="@+id/spn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                </RelativeLayout>
+
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:layout_marginTop="10dp">
                 <TextView android:id="@+id/spnTitle2"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:textStyle="bold"
                     android:gravity="center_vertical"
-                    android:text="Texto"/>
+                    android:text="Texto"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"/>
 
-                <Spinner android:id="@+id/spn2"
+                <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:background="@color/white">
+                <Spinner android:id="@+id/spn2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="3"/>
+                </RelativeLayout>
             </LinearLayout>
 
         </LinearLayout>
