--- a/app/src/main/res/layout/notification_bar.xml
+++ b/app/src/main/res/layout/notification_bar.xml
@@ -2,7 +2,9 @@
 <android.support.v7.widget.CardView android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    app:cardBackgroundColor="@color/colorPrimary"
+    android:elevation="0dp">
 
 
         <LinearLayout android:id="@+id/llParent"
@@ -11,8 +13,7 @@
             android:paddingRight="20dp"
             android:paddingBottom="5dp"
             android:orientation="horizontal"
-            android:gravity="right"
-            android:background="@color/colorPrimary">
+            android:gravity="right">
 
 
             <LinearLayout android:id="@+id/llMenu"
@@ -27,7 +28,8 @@
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:visibility="visible"
                     android:layout_marginLeft="10dp"
-                    android:layout_gravity="left"/>
+                    android:layout_gravity="left"
+                    android:alpha="0.5"/>
             </LinearLayout>
 
 
