--- a/app/src/main/res/layout/add_product_dialog.xml
+++ b/app/src/main/res/layout/add_product_dialog.xml
@@ -52,7 +52,7 @@
             android:layout_height="50dp"
             android:layout_gravity="center"
             app:cardCornerRadius="25dp"
-            android:backgroundTint="@color/colorPrimary"
+            app:cardBackgroundColor="@color/colorPrimary"
             android:layout_marginTop="15dp">
             <TextView android:id="@+id/btnOK"
                 android:layout_width="match_parent"
