--- a/app/src/main/res/layout/custom_dialog_1btn.xml
+++ b/app/src/main/res/layout/custom_dialog_1btn.xml
@@ -15,11 +15,11 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <RelativeLayout
+        <RelativeLayout android:id="@+id/rlBackground"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@color/red_700">
+            android:layout_weight="1">
+
            <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
