--- a/app/src/main/res/layout/receipt_row.xml
+++ b/app/src/main/res/layout/receipt_row.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -19,14 +19,16 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text=""
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:textSize="18sp"/>
 
             <TextView android:id="@+id/tvDate"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text=""
                 android:layout_weight="1"
-                android:gravity="right"/>
+                android:gravity="right"
+                android:textSize="18sp"/>
         </LinearLayout>
 
 
@@ -41,19 +43,22 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text=""
-                android:layout_weight="3"/>
+                android:layout_weight="3"
+                android:textSize="18sp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Cedula: "
-                android:gravity="right"/>
+                android:gravity="right"
+                android:visibility="gone"/>
 
             <TextView android:id="@+id/tvDocument"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text=""
                 android:layout_weight="2"
-                android:gravity="right"/>
+                android:gravity="right"
+                android:visibility="gone"/>
 
 
         </LinearLayout>
@@ -68,27 +73,44 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Status: "/>
+                android:text="Status: "
+                android:textSize="18sp"/>
 
             <TextView android:id="@+id/tvStatus"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text=""
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:textSize="18sp"/>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Total:"
+                android:textSize="18sp"/>
+            <TextView android:id="@+id/tvTotal"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text=""
+                android:gravity="right"
+                android:textSize="18sp"/>
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Tel: "
                 android:layout_weight="1.3"
-                android:gravity="right"/>
+                android:gravity="right"
+                android:visibility="gone"/>
 
             <TextView android:id="@+id/tvPhone"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text=""
                 android:layout_weight="1.5"
-                android:gravity="right"/>
+                android:gravity="right"
+                android:visibility="gone"/>
         </LinearLayout>
 
     <LinearLayout
@@ -99,14 +121,16 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Total:"
-            android:textSize="18sp"/>
-        <TextView android:id="@+id/tvTotal"
+            android:text="Pagado:"
+            android:textSize="18sp"
+            android:textStyle="bold"/>
+        <TextView android:id="@+id/tvPaid"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text=""
             android:gravity="right"
-            android:textSize="18sp"/>
+            android:textSize="18sp"
+            android:textStyle="bold"/>
     </LinearLayout>
     </LinearLayout>
 
