--- a/app/src/main/res/layout/row_sales_detail.xml
+++ b/app/src/main/res/layout/row_sales_detail.xml
@@ -17,18 +17,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:minWidth="30dp"
-                android:text=""/>
+                android:text=""
+                android:textSize="18sp"/>
 
             <TextView android:id="@+id/tvMeasure"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.4"/>
+                android:layout_weight="0.4"
+                android:textSize="18sp"/>
 
             <TextView android:id="@+id/tvDescription"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text=""/>
+                android:text=""
+                android:textSize="18sp"/>
 
         </LinearLayout>
 
