--- a/app/src/main/res/menu/receipt_context_menu.xml
+++ b/app/src/main/res/menu/receipt_context_menu.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:id="@+id/payments"
+        android:title="Pagos"/>
+
     <item android:id="@+id/print"
         android:title="Imprimir"
         android:icon="@drawable/printer"/>
