--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimarySoft">#90CAF9</color>
     <color name="red_200">#EF9A9A</color>
     <color name="amber_200">#FFE082</color>
     <color name="yellow_700">#FFD600</color>
