--- a/app/src/main/res/layout/activity_admin_configuration.xml
+++ b/app/src/main/res/layout/activity_admin_configuration.xml
@@ -1,50 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AdminConfiguration"
     android:orientation="vertical">
 
-    <LinearLayout android:id="@+id/llCredentials"
+    <FrameLayout android:id="@+id/details"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
-
-        <EditText android:id="@+id/etUser"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:layout_margin="20dp"/>
-        <EditText android:id="@+id/etPass"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:layout_margin="20dp"/>
-
-        <Button android:id="@+id/btnOK"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="Ok"/>
-
-    </LinearLayout>
-
-    <LinearLayout android:id="@+id/llConfiguration"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:visibility="gone">
-
-        <Button android:id="@+id/initializeLicense"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="Initialize"/>
-
-    </LinearLayout>
-
+        android:layout_height="match_parent" />
 </LinearLayout>
