--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".Login"
     android:orientation="vertical"
-    android:id="@+id/root">
+    android:id="@+id/root"
+    android:padding="50dp">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -49,10 +50,22 @@
                 android:hint="Password"
                 android:inputType="textPassword"/>
 
-            <Button android:id="@+id/btnLogin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Login"/>
+            <android.support.v7.widget.CardView
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                android:padding="10dp"
+                app:cardBackgroundColor="@color/colorPrimary"
+                app:cardCornerRadius="20dp"
+                android:layout_gravity="center">
+                <TextView android:id="@+id/btnLogin"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="Login"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"/>
+
+            </android.support.v7.widget.CardView>
 
             <TextView android:id="@+id/tvErrorMsg"
                 android:layout_width="match_parent"
