--- a/app/src/main/res/layout/dialog_edit_button.xml
+++ b/app/src/main/res/layout/dialog_edit_button.xml
@@ -1,54 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="20dp">
+    android:layout_margin="50dp"
+    app:cardCornerRadius="30dp">
 
-    <LinearLayout android:id="@+id/llProgress"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:visibility="invisible">
+        android:padding="50dp">
 
-        <ProgressBar android:id="@+id/pb"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"/>
-        <TextView
+        <LinearLayout android:id="@+id/llProgress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="please wait..."
-            android:textColor="@android:color/black"
-            android:gravity="center"
-            android:textSize="10sp"
-            android:padding="10dp"/>
+            android:orientation="vertical"
+            android:visibility="invisible">
 
+            <ProgressBar android:id="@+id/pb"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="please wait..."
+                android:textColor="@android:color/black"
+                android:gravity="center"
+                android:textSize="10sp"
+                android:padding="10dp"/>
+
+        </LinearLayout>
+
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText android:id="@+id/etValue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </android.support.design.widget.TextInputLayout>
+
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/btnOK"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            app:cardCornerRadius="30dp"
+            app:cardBackgroundColor="@color/colorPrimary"
+            android:layout_marginTop="20dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Aceptar"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:textStyle="bold"/>
+
+        </android.support.v7.widget.CardView>
+
+        <TextView android:id="@+id/tvMessage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text=""
+            android:textColor="@android:color/black"/>
     </LinearLayout>
 
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/input_layout_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText android:id="@+id/etValue"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    </android.support.design.widget.TextInputLayout>
-
-
-    <Button android:id="@+id/btnOK"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="Iniciar"/>
-
-    <TextView android:id="@+id/tvMessage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text=""
-        android:textColor="@android:color/black"/>
-</LinearLayout>
+</android.support.v7.widget.CardView>
