--- a/app/src/main/res/layout/fragment_receipt.xml
+++ b/app/src/main/res/layout/fragment_receipt.xml
@@ -247,6 +247,19 @@
                 </LinearLayout>
 
 
+                <android.support.v7.widget.CardView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    app:cardBackgroundColor="@color/colorAccent"
+                    app:cardCornerRadius="30dp"
+                    android:layout_gravity="center_horizontal"
+                    android:id="@+id/btnAddClient">
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_action_add"
+                        android:padding="10dp"/>
+                </android.support.v7.widget.CardView>
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
