--- a/app/src/main/res/layout/add_product_dialog.xml
+++ b/app/src/main/res/layout/add_product_dialog.xml
@@ -17,32 +17,91 @@
             android:text="Product"
             android:textStyle="bold"
             android:textSize="20sp"/>
-        <TextView android:id="@+id/tvUnitMeasure"
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:text="asdasddsa"
-            android:textStyle="italic"/>
+            android:orientation="horizontal">
+
+            <TextView android:id="@+id/tvMeasure"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1.5"
+                android:gravity="center_vertical"
+                android:text=""
+                android:visibility="gone"/>
+
+            <LinearLayout android:id="@+id/llMeasure"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1.5"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textSize="15sp"
+                    android:text="Medida"
+                    android:textStyle="italic"
+                    android:paddingRight="20dp"
+                    android:gravity="center_vertical"/>
+
+                <Spinner android:id="@+id/spnUnitMeasure"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"/>
+
+            </LinearLayout>
+
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/tilPrecio"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="Precio"
+                android:layout_marginLeft="20dp"
+                android:layout_weight="1">
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/etPrice"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:gravity="center"
+                    android:selectAllOnFocus="true"/>
+            </android.support.design.widget.TextInputLayout>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="10dp"
+            android:gravity="right">
+
+            <TextView android:id="@+id/tvRangePrice"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text=""
+                android:gravity="center_vertical"/>
 
 
             <android.support.design.widget.TextInputLayout
-                android:layout_width="0dp"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:hint="Cantidad"
-                android:layout_weight="1">
+                android:hint="Cantidad">
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/etCantidad"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:selectAllOnFocus="true"
+                    android:maxLength="3"/>
             </android.support.design.widget.TextInputLayout>
+
+
+
         </LinearLayout>
 
 
