--- a/app/src/main/res/layout/dialog_add_edit_product.xml
+++ b/app/src/main/res/layout/dialog_add_edit_product.xml
@@ -226,7 +226,9 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textStyle="bold"
-                            android:text=""/>
+                            android:text=""
+                            android:paddingLeft="10dp"
+                            android:textSize="20sp"/>
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -249,7 +251,8 @@
                                     android:id="@+id/etMeasurePrice"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:inputType="numberDecimal"/>
+                                    android:inputType="numberDecimal"
+                                    android:selectAllOnFocus="true"/>
                             </android.support.design.widget.TextInputLayout>
                         </LinearLayout>
 
@@ -275,7 +278,8 @@
                                     android:id="@+id/etMin"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:inputType="numberDecimal"/>
+                                    android:inputType="numberDecimal"
+                                    android:selectAllOnFocus="true"/>
                             </android.support.design.widget.TextInputLayout>
 
 
@@ -288,7 +292,8 @@
                                     android:id="@+id/etMax"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:inputType="numberDecimal"/>
+                                    android:inputType="numberDecimal"
+                                    android:selectAllOnFocus="true"/>
                             </android.support.design.widget.TextInputLayout>
 
 
