--- a/app/src/main/res/layout/fragment_receipt_search.xml
+++ b/app/src/main/res/layout/fragment_receipt_search.xml
@@ -12,8 +12,9 @@
       android:orientation="vertical"
       android:background="@color/gray_200">
 
+      <!--
       <include layout="@layout/notification_bar"/>
-
+-->
       <android.support.v7.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
@@ -36,36 +37,165 @@
                   android:textSize="25sp"
                   android:padding="20dp"/>
 
+
+
+              <android.support.v7.widget.CardView
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  app:cardCornerRadius="20dp">
+
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:orientation="horizontal">
+                  android:orientation="vertical"
+                  android:padding="20dp">
 
-                  <TextView
-                      android:layout_width="wrap_content"
-                      android:layout_height="match_parent"
-                      android:text="Status "
-                      android:textStyle="bold"
-                      android:textColor="@color/white"
-                      android:textSize="18sp"
-                      android:layout_marginRight="5dp"/>
-
-                  <RelativeLayout
-                      android:layout_width="0dp"
+                  <LinearLayout
+                      android:layout_width="match_parent"
                       android:layout_height="wrap_content"
-                      android:layout_weight="1"
-                      android:background="@color/white">
-                      <Spinner android:id="@+id/spnStatus"
+                      android:orientation="horizontal">
+
+                      <TextView
+                          android:layout_width="wrap_content"
+                          android:layout_height="match_parent"
+                          android:text="Status "
+                          android:textStyle="bold"
+                          android:textSize="18sp"
+                          android:layout_marginRight="5dp"
+                          android:gravity="center_vertical"/>
+
+                      <RelativeLayout
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
-                          android:layout_weight="1"/>
-                  </RelativeLayout>
+                          android:background="@color/white">
+                          <Spinner android:id="@+id/spnStatus"
+                              android:layout_width="match_parent"
+                              android:layout_height="wrap_content"
+                              android:layout_weight="1"/>
+                      </RelativeLayout>
 
 
+                  </LinearLayout>
+
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="horizontal">
+
+                      <CheckBox android:id="@+id/cbClient"
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:layout_gravity="center_vertical"/>
+
+                      <android.support.design.widget.TextInputLayout
+                          android:layout_width="0dp"
+                          android:layout_height="wrap_content"
+                          android:hint="Client"
+                          android:layout_weight="5"
+                          android:focusableInTouchMode="false">
+
+                          <android.support.design.widget.TextInputEditText
+                              android:id="@+id/etClient"
+                              android:layout_width="match_parent"
+                              android:layout_height="wrap_content"
+                              android:focusableInTouchMode="false"/>
+                      </android.support.design.widget.TextInputLayout>
+
+                      <RelativeLayout
+                          android:layout_width="0dp"
+                          android:layout_height="match_parent"
+                          android:layout_weight="1">
+
+                          <android.support.v7.widget.CardView
+                              android:id="@+id/btnSearchClients"
+                              android:layout_width="50dp"
+                              android:layout_height="50dp"
+                              app:cardBackgroundColor="@color/colorPrimary"
+                              app:cardCornerRadius="25dp">
+
+                              <ImageView
+                                  android:layout_width="match_parent"
+                                  android:layout_height="match_parent"
+                                  android:src="@drawable/ic_action_search"
+                                  android:padding="10dp"/>
+                          </android.support.v7.widget.CardView>
+                      </RelativeLayout>
+                  </LinearLayout>
+
+
+
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="horizontal">
+
+                      <CheckBox android:id="@+id/cbDate"
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:layout_gravity="center_vertical"/>
+
+                      <android.support.design.widget.TextInputLayout
+                          android:layout_width="0dp"
+                          android:layout_height="wrap_content"
+                          android:hint="Desde"
+                          android:layout_weight="1"
+                          android:layout_marginRight="10dp">
+
+                          <android.support.design.widget.TextInputEditText
+                              android:id="@+id/etDateIni"
+                              android:layout_width="match_parent"
+                              android:layout_height="wrap_content"
+                              android:focusableInTouchMode="false"/>
+                      </android.support.design.widget.TextInputLayout>
+
+
+                      <android.support.design.widget.TextInputLayout
+                          android:layout_width="0dp"
+                          android:layout_height="wrap_content"
+                          android:hint="Hasta"
+                          android:layout_weight="1"
+                          android:layout_marginLeft="10dp">
+
+                          <android.support.design.widget.TextInputEditText
+                              android:id="@+id/etDateEnd"
+                              android:layout_width="match_parent"
+                              android:layout_height="wrap_content"
+                              android:focusableInTouchMode="false"/>
+                      </android.support.design.widget.TextInputLayout>
+                  </LinearLayout>
               </LinearLayout>
+
+              </android.support.v7.widget.CardView>
+
+
+
+
+
+              <android.support.v7.widget.CardView
+                  android:layout_width="200dp"
+                  android:layout_height="50dp"
+                  android:padding="10dp"
+                  app:cardBackgroundColor="@color/white"
+                  app:cardCornerRadius="20dp"
+                  android:layout_gravity="center"
+                  android:id="@+id/btnSearch"
+                  android:layout_marginTop="10dp">
+
+                  <TextView
+                      android:layout_width="match_parent"
+                      android:layout_height="match_parent"
+                      android:gravity="center"
+                      android:text="Buscar"
+                      android:textColor="@color/colorPrimary"
+                      android:textStyle="bold"
+                      android:textSize="18sp"/>
+
+              </android.support.v7.widget.CardView>
+
 
 
           </LinearLayout>
+
       </android.support.v7.widget.CardView>
 
       <RelativeLayout
@@ -81,7 +211,8 @@
           <ProgressBar android:id="@+id/pb"
               android:layout_width="80dp"
               android:layout_height="80dp"
-              android:layout_centerInParent="true"/>
+              android:layout_centerInParent="true"
+              android:visibility="gone"/>
 
       </RelativeLayout>
 
