--- a/app/src/main/res/layout/client_row_edition.xml
+++ b/app/src/main/res/layout/client_row_edition.xml
@@ -25,7 +25,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:visibility="gone">
                     <TextView android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="Document:"
@@ -76,6 +77,27 @@
                         android:textSize="16sp"
                         android:layout_weight="4"/>
                     <TextView android:id="@+id/tvPhone"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text=""
+                        android:textStyle="bold"
+                        android:layout_weight="10"
+                        android:gravity="center_vertical"
+                        android:textSize="16sp"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="Nacimiento:"
+                        android:textStyle="bold"
+                        android:gravity="center_vertical"
+                        android:textSize="16sp"
+                        android:layout_weight="4"/>
+                    <TextView android:id="@+id/tvBirth"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text=""
