--- a/app/src/main/res/layout/fragment_receipt.xml
+++ b/app/src/main/res/layout/fragment_receipt.xml
@@ -236,7 +236,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Descripcion"
-                    android:layout_marginTop="5dp">
+                    android:layout_marginTop="5dp"
+                    android:visibility="gone">
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/etDiscountDescription"
                         android:layout_width="match_parent"
@@ -287,8 +288,9 @@
                         <android.support.design.widget.TextInputLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Document"
-                            android:layout_marginTop="10dp">
+                            android:hint="Documento"
+                            android:layout_marginTop="10dp"
+                            android:visibility="gone">
                             <android.support.design.widget.TextInputEditText
                                 android:id="@+id/etDocument"
                                 android:layout_width="match_parent"
@@ -299,7 +301,7 @@
                         <android.support.design.widget.TextInputLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Name"
+                            android:hint="Nombre"
                             android:layout_marginTop="10dp">
                             <android.support.design.widget.TextInputEditText
                                 android:id="@+id/etName"
